Bug 244799 - adding a new messenger address is a bit confusing
Summary: adding a new messenger address is a bit confusing
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-15 23:55 UTC by m.wege
Modified: 2012-01-04 11:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2010-07-15 23:55:21 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

Adding a new messenger address is a bit confusing because is just "AIM". There is no indication that I have to click on it, to change the messenger type. So it may be better to show a "Select Messenger Type" instead of "AIM" there.

Reproducible: Didn't try




OS: Linux (i686) release 2.6.34-5-generic-pae
Compiler: cc
Comment 1 Jonathan Marten 2012-01-04 11:27:45 UTC
Git commit 3c31df07e12ef288e4b5f7484a2ccf52701da533 by Jonathan Marten.
Committed on 04/01/2012 at 12:20.
Pushed by marten into branch 'master'.

Improve appearance and operation of the IM address dialogue.

Instead of editing in place with an item edit delegate, use a
separate add/edit dialogue for the protocol and address.  The
item delegate is only used for showing the standard address
in bold.

Open the item editor dialogue on a double click, so those users
who are accustomed to the double click to change will not be
surprised.

Eliminates the confusion when a user clicks on "Add" and then
thinks "but I didn't ask for AIM, how do I change it?".
REVIEW:103620
GUI:

M  +1    -0    akonadi/contact/CMakeLists.txt
M  +4    -52   akonadi/contact/editor/im/imdelegate.cpp
M  +0    -2    akonadi/contact/editor/im/imdelegate.h
M  +53   -17   akonadi/contact/editor/im/imeditordialog.cpp
M  +2    -0    akonadi/contact/editor/im/imeditordialog.h
A  +84   -0    akonadi/contact/editor/im/imitemdialog.cpp     [License: BSD]
C  +13   -20   akonadi/contact/editor/im/imitemdialog.h [from: akonadi/contact/editor/im/imeditordialog.h - 062% similarity]     [License: UNKNOWN]  *

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/kdepimlibs/3c31df07e12ef288e4b5f7484a2ccf52701da533