Improve appearance and operation of the IM address dialogue.

Instead of editing in place with an item edit delegate, use a
separate add/edit dialogue for the protocol and address.  The
item delegate is only used for showing the standard address
in bold.

Open the item editor dialogue on a double click, so those users
who are accustomed to the double click to change will not be
surprised.

Eliminates the confusion when a user clicks on "Add" and then
thinks "but I didn't ask for AIM, how do I change it?".

BUG:244799
REVIEW:103620
GUI: