contact/editor/im/imdelegate.h
@@ -32,8 +32,6 @@ class IMDelegate : public QStyledItemDelegate
 
     virtual QWidget* createEditor( QWidget *parent, const QStyleOptionViewItem &option, const QModelIndex &index ) const;
 
-    virtual void setEditorData( QWidget *editor, const QModelIndex &index ) const;
-    virtual void setModelData( QWidget *editor, QAbstractItemModel *model, const QModelIndex &index ) const;
     virtual void paint( QPainter *painter, const QStyleOptionViewItem &option, const QModelIndex &index ) const;
 };
 
